<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.dasein</groupId>
  <artifactId>dasein-persist</artifactId>
  <version>2013.02.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>dasein-persist</name>
  <description>
    Persistence mapping for Java apps
  </description>
  <url>https://github.com/greese/dasein-persist</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <licenses>
    <license>
        <name>Apache License 2.0</name>
        <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
    </license>
  </licenses>
  
  <organization>
    <name>enStratus Networks Inc</name>
    <url>http://www.enstratus.com</url>
  </organization>

    <scm>
        <connection>scm:git:git://github.com/greese/dasein-persist.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/greese/dasein-persist.git</developerConnection>
        <url>http://github.com/greese/dasein-persist</url>
    </scm>
      
  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>5</version>
  </parent>
          
  <dependencies>
    <dependency>
        <groupId>commons-codec</groupId>
        <artifactId>commons-codec</artifactId>
        <version>1.15</version>
        <scope>compile</scope>
        <optional>false</optional>
    </dependency>
    <dependency>
        <groupId>commons-httpclient</groupId>
        <artifactId>commons-httpclient</artifactId>
        <version>3.1</version>
        <scope>compile</scope>
        <optional>false</optional>
    </dependency>     
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>2.19.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.19.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-1.2-api</artifactId>
      <version>2.19.0</version>
    </dependency>
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20230227</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
        <groupId>mysql</groupId>
        <artifactId>mysql-connector-java</artifactId>
        <version>8.0.32</version>
        <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>servlet-api</artifactId>
      <version>2.5</version>
      <scope>provided</scope>
    </dependency>  
    <dependency>
        <groupId>simple-jndi</groupId>
        <artifactId>simple-jndi</artifactId>
        <version>0.11.3</version>
        <scope>test</scope>
    </dependency>   
    <dependency>
    	<groupId>com.googlecode.hs4j</groupId>
    	<artifactId>hs4j</artifactId>
    	<version>0.1</version>
    	<type>jar</type>
    	<scope>compile</scope>
    </dependency>
    <dependency>
    	<groupId>org.dasein</groupId>
    	<artifactId>dasein-util</artifactId>
    	<version>2013.02</version>
    	<type>jar</type>
    	<scope>compile</scope>
    </dependency>
  </dependencies>
  
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>17</source>
          <target>17</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>2.7</version>
          <executions>
              <execution>
                  <id>javadoc</id>
                  <phase>package</phase>
                  <goals>
                      <goal>jar</goal>
                  </goals>
              </execution>
          </executions>                
          <configuration>
              <encoding>utf-8</encoding>
              <quiet>true</quiet>
              <links>
                  <link>http://java.sun.com/javase/6/docs/api/</link>
                  <link>http://java.sun.com/javaee/6/docs/api/</link>
              </links>
              <stylesheetfile>dasein-javadoc.css</stylesheetfile>
              <footer />
          </configuration>
        </plugin>
        <plugin>
            <groupId>com.mycila.maven-license-plugin</groupId>
            <artifactId>maven-license-plugin</artifactId>
            <version>1.8.0</version>
            <configuration>
                <strictCheck>true</strictCheck>
                <encoding>utf-8</encoding>
                <aggregate>true</aggregate>
                <header>src/main/etc/header.txt</header>
                <mapping>
                    <clj>SEMICOLON_STYLE</clj>
                </mapping>
                <excludes>
                    <exclude>thirdparty/**</exclude>
                    <exclude>**/src/**/resources/**</exclude>
                    <exclude>**/LICENSE-APACHE.txt</exclude>
                </excludes>
                <properties>
                    <year>1998-2011</year>
                    <copyrightHolder>enStratus Networks Inc</copyrightHolder>
                </properties>
            </configuration>
        </plugin>
        <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
             <version>2.1.2</version>
              <executions>
                  <execution>
                      <id>source</id>
                      <phase>package</phase>
                      <goals>
                          <goal>jar-no-fork</goal>
                      </goals>
                  </execution>
              </executions> 
        </plugin>     
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-release-plugin</artifactId>
            <version>2.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.2</version>
        <configuration>
          <includes>
            <include>**/RiakTestCase.java</include>
          </includes>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>             
    </plugins>
  </build>
    
    <distributionManagement>
        <repository>
            <id>sonatype-nexus-staging</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
            <uniqueVersion>false</uniqueVersion>
        </repository>
        <snapshotRepository>
            <id>sonatype-nexus-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>    
    </distributionManagement>
  
  <developers>
    <developer>
        <name>George Reese</name>
        <id>georgereese</id>
        <email>george.reese -at- enstratus -dot- com</email>
        <organization>enStratus</organization>
        <roles>
          <role>Java Developer</role>
          <role>PMC</role>
        </roles>
        <url>http://www.enstratus.com</url>
        <timezone>-6</timezone>
    </developer>  
    <developer>
        <name>Morgan Catlin</name>
        <id>sylistron</id>
        <email>morgan.catlin -at- valtira -dot- com</email>
        <organization>enStratus</organization>
        <roles>
          <role>Java Developer</role>
        </roles>
        <url>http://www.valtira.com</url>
        <timezone>-6</timezone>
    </developer>    
  </developers>
</project>
